# F1-race-report-telegram-bot

./: .env  Cargo.toml  README.md  race_data.json  race_dates.txt  races.txt
src/: bot.rs  driver.rs  main.rs  parse.rs  prepare_files.rs  race.rs  race_results.rs  request_to_website.rs
