[package]
name = "test_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
dotenv = "0.15.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = "0.12.3"
scraper = "0.19.0"
chrono = { version = "0.4.37", features = ["serde"] }
serde = "1.0.197"
serde_json = "1.0.115"